--- a/src/components/BtnGroup/style.module.css
+++ b/src/components/BtnGroup/style.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  margin-top: 2rem;
+  margin: 2rem 0 4rem 0;
 }
 
 .BtnsBox button {
