--- a/src/components/Footer/style.module.css
+++ b/src/components/Footer/style.module.css
@@ -1,18 +1,13 @@
 .footer {
-  margin: 0.8rem 0 0 0;
   width: 100%;
+  max-width: 100vw;
   height: 50px;
   backdrop-filter: blur(10px);
   padding: 0.8rem 1.5rem;
   font-size: 1.1rem;
-  background: rgba(255, 255, 255, 0.2);
-  border-top: 1px solid rgba(255, 255, 255, 0.3);
+  background: rgba(0, 0, 0, 0.9);
   transition: all ease-in-out 0.4s;
   overflow: hidden;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
   display: flex;
   justify-content: center;
   align-items: center;
