--- a/src/components/ToDoListPage/style.module.css
+++ b/src/components/ToDoListPage/style.module.css
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 5rem 0;
+  padding: 5rem 0 0 0;
 }
 
 .containerLoading {
