--- a/src/components/ToDoListPage/style.module.css
+++ b/src/components/ToDoListPage/style.module.css
@@ -10,6 +10,8 @@
   justify-content: center;
   align-items: center;
   padding: 5rem 0 0 0;
+  max-width: 100vw;
+  overflow: hidden;
 }
 
 .containerLoading {
